# nodemon-rs

./: Cargo.toml  README.md  index.d.ts  index.js  package.json  test.js
.github/workflows/: CI.yml
__test__/: index.spec.mjs
example/: demo.js  index.js
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
