[package]
edition = "2021"
name = "nodemon-rs"
version = "0.0.0"


[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.15.1", features = ["async"] }
napi-derive = "2.15.0"
notify = "6.1.1"

[build-dependencies]
napi-build = "2.1.0"

[profile.release]
lto = true
strip = "symbols"
